--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,10 +1,17 @@
 /* universal styles */
+
 body {
 	font-family: helvetica;
+	max-width: 100%;
 }
 
 h1 {
 	font-size: 32px;
+	font-weight: bold;
+}
+
+h2 {
+	font-size: 24px;
 	font-weight: bold;
 }
 
@@ -46,6 +53,7 @@ main {
 }
 
 /* banner section */
+
 #banner {
 	background-color: lightgrey;
 	display: flex;
@@ -75,4 +83,50 @@ main {
 	background-color: gray;
 	color: white;
 	margin-top: 24px;
+}
+
+/* information section */
+
+#information-main {
+	display: flex;
+	padding-bottom: 32px;
+}
+
+#information-left {
+	display: flex;
+	flex-direction: column;
+}
+
+#information-left img {
+	width: 60%;
+	padding: 32px 24px;
+}
+
+#information-left .text {
+	width: 60%;
+	padding-left: 24px;
+	padding-right: 24px;
+}
+
+#information-left .text p {
+	padding-top: 24px;
+}
+
+#information-right {
+	display: flex;
+	flex-direction: column;
+}
+
+#information-right .more-info {
+	display: flex;
+}
+
+#information-right img {
+	width: 35%;
+	height: auto;
+	padding: 16px 16px;
+}
+
+#information-right .text {
+	width: 65%;
 }
