--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,18 +1,26 @@
 /* universal styles */
 
+html {
+	font-size: 16px;	
+}
+
 body {
 	font-family: helvetica;
 	max-width: 100%;
 }
 
 h1 {
-	font-size: 32px;
+	font-size: 2rem;
 	font-weight: bold;
 }
 
 h2 {
-	font-size: 24px;
+	font-size: 1.5rem;
 	font-weight: bold;
+}
+
+div {
+	border: 1px solid grey;
 }
 
 /* header section */
@@ -21,16 +29,16 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding-right: 8px;
-	padding-left: 24px;
+	padding-right: .5rem;
+	padding-left: 1.5rem;
 	max-width: 100%;
-	height: 64px;
+	height: 4rem;
 }
 
 header div {
 	display: flex;
 	align-items: center;
-	height: 32px;
+	height: 2rem;
 }
 
 header nav {
@@ -43,7 +51,7 @@ header nav ul {
 }
 
 li {
-	padding-right: 16px;
+	padding-right: 1rem;
 }
 
 /* main */
@@ -63,7 +71,7 @@ main {
 #banner img {
 	width: 60%;
 	height: auto;
-	padding: 32px 24px;
+	padding: 2rem 1.5rem;
 }
 
 #banner .content {
@@ -71,7 +79,7 @@ main {
 }
 
 #banner .content p {
-	margin-top: 24px;
+	margin-top: 1.5rem;
 }
 
 #banner .button {
@@ -79,37 +87,40 @@ main {
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 40px;
+	height: 2.5rem;
 	background-color: gray;
 	color: white;
-	margin-top: 24px;
+	margin-top: 1.5rem;
 }
 
 /* information section */
 
 #information-main {
 	display: flex;
-	padding-bottom: 32px;
+	padding-bottom: 2rem;
+	height: 36rem;
 }
 
 #information-left {
 	display: flex;
 	flex-direction: column;
+	width: 60%;
 }
 
 #information-left img {
-	width: 60%;
-	padding: 32px 24px;
+	padding: 2rem 1.5rem;
+	width: 90%;
 }
 
 #information-left .text {
-	width: 60%;
-	padding-left: 24px;
-	padding-right: 24px;
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+	width: 90%;
 }
 
 #information-left .text p {
-	padding-top: 24px;
+	padding-top: 1.5rem;
+	width: 60%;
 }
 
 #information-right {
@@ -124,9 +135,12 @@ main {
 #information-right img {
 	width: 35%;
 	height: auto;
-	padding: 16px 16px;
+	padding: 1rem 1rem;
 }
 
 #information-right .text {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	width: 65%;
 }
