--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -27,6 +27,10 @@ h2 {
 
 /* header section */
 
+#header-mobile {
+	display: none;
+}
+
 header {
 	display: flex;
 	justify-content: space-between;
@@ -54,6 +58,21 @@ header nav ul {
 
 li {
 	padding-right: 1rem;
+}
+
+/* mobile header */ 
+
+@media only screen and (max-width: 560px) {
+	header {
+		display: none;
+	}
+
+	#header-mobile {
+		display: flex;
+		justify-content: space-around;
+		height: 4rem;
+		align-content: center;
+	}
 }
 
 /* main */
