--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,8 +1,4 @@
 /* universal styles */
-div {
-	border: 1px solid grey;
-}
-
 html {
 	font-size: 16px;	
 }
@@ -63,6 +59,10 @@ li {
 	padding-right: 1rem;
 }
 
+header nav ul li:hover {
+	color: rgb(53, 77, 255);
+}
+
 /* header mobile */ 
 
 @media only screen and (max-width: 560px) {
@@ -87,7 +87,7 @@ main {
 /* banner section */
 
 #banner {
-	background-color: lightgrey;
+	background-color: rgb(165, 204, 255);
 	display: flex;
 	align-items: center;
 }
@@ -106,15 +106,22 @@ main {
 	margin-top: 1.5rem;
 }
 
-#banner .button {
+#banner .button a {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
 	height: 2.5rem;
-	background-color: gray;
+	background-color: rgb(255, 0, 148);
 	color: white;
+	font-weight: bold;
+	font-size: 1.4rem;
 	margin-top: 1.5rem;
+	border-radius: 10px;
+}
+
+#banner .button a:hover {
+	background-color: rgb(53, 77, 255);
 }
 
 /* banner mobile */
@@ -193,6 +200,19 @@ main {
 	display: flex;
 }
 
+#information-right .more-info {
+	background-color: rgb(137, 255, 153);
+	margin: .1rem;
+}
+
+#information-right .more-info:nth-child(2) {
+	background-color: rgba(137, 255, 153, .7);
+}
+
+#information-right .more-info:hover {
+	background-color: rgb(137, 182, 255);
+}
+
 #information-right img.pc {
 	width: 35%;
 	height: auto;
@@ -246,6 +266,7 @@ main {
 		padding: 1rem;
 		width: 100%;
 		height: auto;
+		box-sizing: border-box;
 	}
 
 	#information-right .text {
@@ -258,7 +279,7 @@ main {
 /* course section */
 
 #course-section {
-	background-color: lightgrey;
+	background-color: rgb(165, 204, 255);
 }
 
 #courses {
