--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -4,13 +4,14 @@ html {
 }
 
 body {
-	font-family: helvetica;
+	font-family: 'Montserrat', helvetica, sans-serif;
 	line-height: 1.5rem;
 }
 
 h1 {
 	font-size: 2rem;
 	font-weight: bold;
+	line-height: 2rem;
 }
 
 h2 {
@@ -63,6 +64,11 @@ li {
 	padding: .5rem;
 }
 
+header nav ul li {
+	transition-property: color;
+	transition-duration: .6s;
+}
+
 header nav ul li:hover {
 	color: rgb(53, 77, 255);
 	border: 1px solid rgb(53, 77, 255);
@@ -71,6 +77,10 @@ header nav ul li:hover {
 	transition-duration: .6s;
 }
 
+header nav ul li:active {
+	background-color: purple;
+	color: white;
+}
 /* header mobile */ 
 
 @media only screen and (max-width: 768px) {
@@ -87,10 +97,6 @@ header nav ul li:hover {
 }
 
 /* main */
-
-main {
-	max-width: 100%;
-}
 
 /* banner section */
 
@@ -224,10 +230,17 @@ main {
 	background-color: rgb(137, 182, 255);
 }
 
-#information-right img.pc {
+#information-right .img-container {
+	display: flex;
+	justify-content: left;
+	align-items: center;
 	width: 35%;
+}
+
+#information-right img {
+	width: 65%;
 	height: auto;
-	padding: 1rem 1rem;
+	padding: 1rem;
 }
 
 #information-right .text {
@@ -266,6 +279,7 @@ main {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+		width: 100%;
 	}
 
 	#information-right img.pc {
@@ -294,7 +308,6 @@ main {
 }
 
 #courses {
-	max-width: 100%;
 	padding: 2rem 2.5rem;
 	display: flex;
 	justify-content: center;
@@ -336,6 +349,10 @@ main {
 
 	.course {
 		background-color: lightgrey;
+	}
+
+	.course:active {
+		background-color: rgb(53, 77, 255);
 	}
 
 	.course img {
