--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -94,6 +94,14 @@ header nav ul li:active {
 		align-items: center;
 		height: 4rem;
 	}
+
+	#header-mobile a:active {
+		border: 1px solid rgb(53, 77, 255);
+		border-radius: .5rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 }
 
 /* main */
